Fix reducer filter, overflow hidden x body

--- a/src/components/favorites/Favorites.module.css
+++ b/src/components/favorites/Favorites.module.css
@@ -5,7 +5,6 @@
 }
 
 .select {
-	margin: 0 5px;
 	color: #000;
 	background-color: #f1faee;
 	border: none;
