--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
 
-* {
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
 body {
 	margin: 0;
-	height: 100%;
+	height: 100vh;
 	box-sizing: border-box;
 	font-family: "Titillium Web", sans-serif;
 	/* font-family: "Poppins", sans-serif; */
@@ -19,6 +14,7 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 	-webkit-font-smoothing: antialiased;
+	overflow-x: hidden;
 }
 
 .bodyBlack {
